# EdgeAI-Gesture-Translation-System

./: .gitignore  BLE_KEYBOARD.md  CMakeLists.txt  LICENSE  README.md  SENSOR_BRINGUP.md  data_restructure.py  feature_extraction.py  intro.md  prj.conf
boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
docs/: architecture.md  bluetooth.md  machine_learning.md
gesture_app/: CMakeLists.txt  prj.conf  sample.yaml
gesture_app/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
gesture_app/drivers/: CMakeLists.txt  Kconfig
gesture_app/dts/bindings/sensor/: st,lsm6ds3-common.yaml
gesture_app/src/: constants.hpp  gesture_inference.c  gesture_inference.h  gesture_model.cpp  gesture_model.h  gesture_predictor.cpp  gesture_predictor.hpp  imu_handler.cpp  imu_handler.hpp  main.c  main.cpp  main_functions.cpp  main_functions.hpp  output_handler.cpp  output_handler.hpp
gesture_app_cnn/: CMakeLists.txt  prj.conf
gesture_app_cnn/drivers/lsm6ds3/: CMakeLists.txt  Kconfig  lsm6ds3_i2c.c
gesture_app_cnn/src/: constants.hpp  gesture_model.cpp  gesture_model.hpp  imu_handler.cpp  imu_handler.hpp  main.cpp  main_functions.cpp  main_functions.hpp  output_handler.hpp
gesture_app_rf/: CMakeLists.txt  prj.conf  sample.yaml
gesture_app_rf/src/: ble_keyboard.c  (+11 more)
machine_learning/: best_deepconvlstm_model.h5  constant.py  data_collector.py  data_consolidator.py  data_exploration.py  data_normalization_params.py  data_visualization.py  model.py  model_optimizer.py  normalization_params.py  preprocess.py  requirements.txt  train.py
ml/: feature_extraction.py
src/: imu.c  imu.h  main.c
(+1442 files in other folders)
