# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.20.0)

list(APPEND ZEPHYR_EXTRA_MODULES ${CMAKE_CURRENT_SOURCE_DIR}/drivers)
list(APPEND DTS_ROOT ${CMAKE_CURRENT_SOURCE_DIR})

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(gesture_recognition)

FILE(GLOB app_sources src/*.c)
target_sources(app PRIVATE ${app_sources})

# TensorFlow Lite Micro path
set(TFLM_PATH ${ZEPHYR_BASE}/../modules/lib/tflite-micro)

# Application sources
target_sources(app PRIVATE
    src/main.c
    src/gesture_inference.c
)

# Include directories
target_include_directories(app PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${TFLM_PATH}
)
